Work in Progress

--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
 </head>
 <body>
     <header>
-        <h1>(name) - Programming Student and Web Developer</h1>
+        <h1>George Manea - Programming Student and Web Developer</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section id="about">
         <h2>About Me</h2>
 
-        <p>Hello, my name is (name), I am from (location). I've been a programming, web developing and coding student for
+        <p>Hello, my name is George Octavian Manea, I am from Busteni, Prahova. I've been a programming, web developing and coding student for
             8 months, and for me, programming is not something that you should learn about, it's a hobby, which is something that I openly enjoy.
             I am always open to new knowledge about programming and to apply them in practice, and to learn about the basics behind many coding
             programs.
@@ -22,14 +29,35 @@
             <strong>Programming Tools:</strong> IntelliJ, Visual Studio Code (VSCode)
         </p>
     </section>
-    <h2>Portfolio</h2>
-    <img src="Images/coffeemachine.png" alt="Coffee Machine" width="300">
-    <p><strong>Coffee Machine</strong></p>
 
-    <img src="Images/flashcards.png" alt="Flashcards" width="300">
-    <p><strong>Flashcards</strong></p>
+    <section id="portfolio">
+        <h2>Portfolio</h2>
 
-    <img src="Images/virtualpiano.png" alt="Virtual Piano" width="300">
-    <p><strong>Virtual Piano</strong></p>
+        <div>
+            <img src="Images/coffeemachine.png" alt="Coffee Machine" width="300">
+            <li><a href="https://georgemanea64.github.io/Coffee-Machine/">Coffee Machine</a></li>
+        </div>
+
+        <div>
+            <img src="Images/flashcards.png" alt="Flashcards" width="300">
+            <li><a href="https://georgemanea64.github.io/Flashcards/">Flashcards</a></li>
+        </div>
+
+        <div>
+            <img src="Images/virtualpiano.png" alt="Virtual Piano" width="300">
+            <li><a href="https://georgemanea64.github.io/Virtual-Piano/">Virtual Piano</a></li>
+        </div>    
+    </section>
+
+    <section id="contacts">
+        <h2>Contacts</h2>
+        <p>Email: Maneageorge935@gmail.com</p>
+        <p>Phone: +40 730 432 704</p>
+        <p>Githun: <a href="https://github.com/GeorgeManea64" target="_blank">https://github.com/GeorgeManea64</a></p>
+    </section>
+
+    <footer>
+        <p>© 2025 George Manea. All rights reserved.</p>
+    </footer>
 </body>
 </html>
