--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
         <h1>George Manea - Programming Student and Web Developer</h1>
     </header>
 
-    <nav>
+    <div class="hamburger-icon" id="hamburger-icon">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+    <nav id="nav-menu" class="hamburger-menu">
         <ul>
             <li><a href="#about">About Me</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
