--- a/index.html
+++ b/index.html
@@ -9,32 +9,15 @@
 <body>
     <header>
         <h1>George Manea - Programming Student and Web Developer</h1>
-
-        <!-- Hamburger for Mobile -->
-        <div class="hamburger" id="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-
-        <!-- Desktop Nav -->
-        <nav class="navbar" id="navbar">
-            <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contacts">Contacts</a></li>
-            </ul>
-        </nav>
-
-        <!-- Mobile Dropdown -->
-        <div class="menu" id="menu">
-            <ul>
-                <li><a href="#about" onclick="toggleMenu()">About Me</a></li>
-                <li><a href="#portfolio" onclick="toggleMenu()">Portfolio</a></li>
-                <li><a href="#contacts" onclick="toggleMenu()">Contacts</a></li>
-            </ul>
-        </div>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contacts">Contacts</a></li>
+        </ul>
+    </nav>
 
     <section id="about">
         <h2>About Me</h2>
@@ -84,8 +67,6 @@
         <p>Phone: +40 730 432 704</p>
         <p>Github: <a href="https://github.com/GeorgeManea64" target="_blank">https://github.com/GeorgeManea64</a></p>
     </section>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <footer>
         <p>© 2025 George Manea. All rights reserved.</p>
