Project Finished (Updated Colors)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             programs.
             <br><br>
             <strong>Skills:</strong> HTML, CSS, JavaScript<br>
-            <strong>Programming Tools:</strong> IntelliJ, Visual Studio Code (VSCode)
+            <strong>Programming Tools:</strong> IntelliJ Community Edition and Visual Studio Code (VSCode)
         </p>
     </section>
 
