--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </header>
 
     <nav>
-        <ul>
+        <button id="menu-toggle" class="hamburger">&#9776;</button>
+        <ul id="nav-links">
             <li><a href="#about">About Me</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contacts">Contacts</a></li>
